Implemented methods to control the i18n